# modern-automated-lbo

./: .gitignore  AAPL_LBO_Model.xlsx  AAPL_Test_LBO.xlsx  LICENSE  MSFT_LBO_Model.xlsx  README.md  TSLA_LBO_Model.xlsx  pyproject.toml  requirements.txt
examples/: demo.ipynb
src/automated_lbo/: __init__.py  cli.py  data_fetch.py  excel_writer.py  lbo_model.py
src/modern_automated_lbo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_lbo.py
