[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modern-automated-lbo"
version = "1.0.0"
description = "Automated Leveraged Buyout (LBO) modeling library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nico Rode"}
]
dependencies = [
    "yfinance",
    "pandas",
    "numpy",
    "numpy-financial",
    "openpyxl",
    "matplotlib",
    "click"
]

[project.scripts]
lbo = "automated_lbo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["automated_lbo*"]
